EasyDarwin update Web后台
Former-commit-id: b46fc30ca8bd914a80752d4a12d891de6ead11e8
Former-commit-id: eb7d626d0b00108ee0c5ec5b327c9249da46fb30 [formerly 899c90eb384176ec81fdae163358851f4439f093]
Former-commit-id: 652cd435a458f48397387a6de6058fb5051385fc

--- a/nginx/www/easyplayer.html
+++ b/nginx/www/easyplayer.html
@@ -60,7 +60,6 @@
             height: auto;
         }
     </style>
-    <script src="/js/cyberplayer.js"></script>
 </head>
 
 <body class="hold-transition skin-green sidebar-mini">
@@ -134,17 +133,21 @@
                     <div class="col-lg-offset-2 col-lg-8 no-padding server-info">
                         <div class="box box-widget">
                             <div class="box-header">
-                                <h3> <i class="fa fa-video-camera"></i> 播放信息</h3>
+                                <h3> <i class="fa fa-toggle-right"></i> EasyPlayer流媒体播放器</h3>
                             </div>
                             <div class="box-body table-responsive no-padding">
                                 <table class="table table-striped">
                                     <tr>
-                                        <td>协议</td>
-                                        <td><span>RTSP</span></td>
+                                        <td style="width: 20%">项目介绍</td>
+                                        <td>EasyPlayer是由EasyDarwin开源团队开发和维护的一个流媒体播放器项目，目前有RTSP版和Pro版两个版本，RTSP支持Windows(支持多窗口、包含ActiveX，npAPI Web插件)、Android平台，iOS平台，视频支持H.264，H.265，MPEG4，MJPEG，音频支持G711A，G711U，G726，AAC，支持RTSP over TCP/UDP，支持硬解码，是一套极佳的RTSP流播放组件；
+                                            EasyPlayer Pro版支持RTSP、RTMP、HTTP、HLS等各种流媒体协议播放，稳定、高效、可靠，支持Windows、Android、iOS！</td>
                                     </tr>
                                     <tr>
-                                        <td>播放地址</td>
-                                        <td><span id="rtsp_url"></span></td>
+                                        <td>代码及编译方法</td>
+                                        <td>Android：代码地址：<a href="https://github.com/EasyDarwin/EasyPlayer_Android">https://github.com/EasyDarwin/EasyPlayer_Android</a> 编译工具：Android Studio；
+                                            <br/>iOS：代码地址：<a href="https://github.com/EasyDarwin/EasyPlayer_iOS">https://github.com/EasyDarwin/EasyPlayer_iOS</a> 编译工具：xcode;
+                                            <br/>Windows：vs2010编译；
+                                        </td>
                                     </tr>
                                     <tr>
                                         <td>Windows RTSP播放器</td>
@@ -168,19 +171,16 @@
                                         <td>EasyPlayer项目地址</td>
                                         <td><a href="https://github.com/EasyDarwin/EasyPlayer">https://github.com/EasyDarwin/EasyPlayer</a></td>
                                     </tr>
+                                    <tr>
+                                        <td>详细介绍</td>
+                                        <td><a href="https://github.com/EasyDarwin/EasyPlayer/blob/master/README.md">https://github.com/EasyDarwin/EasyPlayer/blob/master/README.md</a></td>
+                                    </tr>
                                 </table>
                             </div>
-                            <div class="box-footer"><button id="back-btn" class="label pull-right btn btn-sm btn-default">
-									<i class="fa fa-back"></i>返回
-								</button></div>
                         </div>
                     </div>
                 </div>
                 <script>
-                    $("#rtsp_url").html($.cookie("videoUrl"));
-                    $("#back-btn").click(function() {
-                        top.location.href = "/index.html";
-                    });
                 </script>
             </section>
         </div>
