--- a/nginx/www/index.html
+++ b/nginx/www/index.html
@@ -100,7 +100,7 @@
             <section class="sidebar">
                 <ul class="sidebar-menu">
                     <li class="treeview">
-                        <a href="/">
+                        <a href="/index.html">
                             <i class="fa fa-video-camera"></i>
                             <span>直播推流列表</span>
                         </a>
@@ -115,6 +115,18 @@
                         <a href="/about.html">
                             <i class="fa fa-support"></i>
                             <span>服务运行信息</span>
+                        </a>
+                    </li>
+                    <li class="treeview">
+                        <a href="/easypusher.html">
+                            <i class="fa   fa-sign-in"></i>
+                            <span>EasyPusher</span>
+                        </a>
+                    </li>
+                    <li class="treeview">
+                        <a href="/easyplayer.html">
+                            <i class="fa  fa-toggle-right"></i>
+                            <span>EasyPlayer</span>
                         </a>
                     </li>
                 </ul>
@@ -191,14 +203,14 @@
                     </table>
                 </div>
                 <script>
-                    //var openurls = ["/","/about.html"];
+                    var openurls = ["/", "/easyplayer.html", "/easypusher.html"];
                     var token = $.cookie("token") || "";
-                    //if(!token && $.inArray(location.pathname,openurls) < 0){
-                    //	top.location.href = "/login.html";
-                    //}
+                    if (!token && $.inArray(location.pathname, openurls) < 0) {
+                        top.location.href = "/login.html";
+                    }
                     if (!token) {
-                        $(".treeview [href=/config.html]").closest(".treeview").hide();
-                        $(".treeview [href=/channel.html]").closest(".treeview").hide();
+                        // $(".treeview [href=/config.html]").closest(".treeview").hide();
+                        // $(".treeview [href=/about.html]").closest(".treeview").hide();
                     }
                     $("#btn-logout").click(function() {
                         $.get(_url + "/logout");
