--- a/nginx/www/play.html
+++ b/nginx/www/play.html
@@ -96,7 +96,7 @@
             <section class="sidebar">
                 <ul class="sidebar-menu">
                     <li class="treeview">
-                        <a href="/">
+                        <a href="/index.html">
                             <i class="fa fa-video-camera"></i>
                             <span>直播推流列表</span>
                         </a>
@@ -111,6 +111,18 @@
                         <a href="/about.html">
                             <i class="fa fa-support"></i>
                             <span>服务运行信息</span>
+                        </a>
+                    </li>
+                    <li class="treeview">
+                        <a href="/easypusher.html">
+                            <i class="fa   fa-sign-in"></i>
+                            <span>EasyPusher</span>
+                        </a>
+                    </li>
+                    <li class="treeview">
+                        <a href="/easyplayer.html">
+                            <i class="fa  fa-toggle-right"></i>
+                            <span>EasyPlayer</span>
                         </a>
                     </li>
                 </ul>
