--- a/nginx/www/config.html
+++ b/nginx/www/config.html
@@ -81,7 +81,7 @@
             <section class="sidebar">
                 <ul class="sidebar-menu">
                     <li class="treeview">
-                        <a href="/">
+                        <a href="/index.html">
                             <i class="fa fa-video-camera"></i>
                             <span>直播推流列表</span>
                         </a>
@@ -96,6 +96,18 @@
                         <a href="/about.html">
                             <i class="fa fa-support"></i>
                             <span>服务运行信息</span>
+                        </a>
+                    </li>
+                    <li class="treeview">
+                        <a href="/easypusher.html">
+                            <i class="fa   fa-sign-in"></i>
+                            <span>EasyPusher</span>
+                        </a>
+                    </li>
+                    <li class="treeview">
+                        <a href="/easyplayer.html">
+                            <i class="fa  fa-toggle-right"></i>
+                            <span>EasyPlayer</span>
                         </a>
                     </li>
                 </ul>
@@ -165,15 +177,15 @@
             <section class="content">
 
                 <script>
-                    //var openurls = ["/","/about.html"];
+                    var openurls = ["/", "/easyplayer.html", "/easypusher.html"];
                     var token = $.cookie("token") || "";
-                    //if(!token && $.inArray(location.pathname,openurls) < 0){
-                    //	top.location.href = "/login.html";
-                    //}
-                    if (!token) {
-                        $(".treeview [href=/config.html]").closest(".treeview").hide();
-                        $(".treeview [href=/channel.html]").closest(".treeview").hide();
+                    if (!token && $.inArray(location.pathname, openurls) < 0) {
+                        top.location.href = "/login.html";
                     }
+                    // if (!token) {
+                    //     $(".treeview [href=/config.html]").closest(".treeview").hide();
+                    //     $(".treeview [href=/channel.html]").closest(".treeview").hide();
+                    // }
                     $("#btn-logout").click(function() {
                         $.get(_url + "/logout");
                         $.cookie("token", "", {
