--- a/nginx/www/index.html
+++ b/nginx/www/index.html
@@ -56,6 +56,24 @@
         .channel.offline .mask {
             display: block;
         }
+        
+        .left_div {
+            position: absolute;
+            top: 12%;
+            left: 2.5%;
+            width: 18%;
+            height: 81%;
+            cursor: pointer;
+        }
+        
+        .right_div {
+            position: absolute;
+            top: 18%;
+            right: 3%;
+            width: 18%;
+            height: 69%;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -187,54 +205,71 @@
             </div>
         </div>
 
-        <div class="content-wrapper">
+        <div class="content-wrapper" style="background-color: white">
             <section class="content">
                 <div class="container-fluid">
-                    <table id="session-table" style="display:none" class="easyui-datagrid hide" width="100%" height="500px;" rownumbers="true" pagination="true" title="直播流列表" data-options="onBeforeLoad : onBeforeLoad">
+                    <table id="session-table" style="display:none" class="easyui-datagrid hide" width="100%" height="400px;" rownumbers="true" pagination="true" title="直播流列表" data-options="onBeforeLoad : onBeforeLoad">
                         <thead>
                             <tr>
                                 <th field="index" width="10%" align="center" sortable="true">序号</th>
                                 <th field="Channel" width="20%" align="center" sortable="false">通道</th>
-                                <th field="name" width="20%" align="right" sortable="true">名称</th>
+                                <th field="name" width="25%" align="right" sortable="true">名称</th>
                                 <th field="NumOutputs" width="20%" align="right" sortable="true">在线人数</th>
                                 <th field="url" width="20%" align="center" formatter="formatOpt" sortable="false">操作</th>
                             </tr>
                         </thead>
                     </table>
                 </div>
+                <div class="box box-success box-solid" style="width: 99.5%;margin: auto;margin-top:30px;margin-left: 0.5%;">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">EasyDarwin系统拓扑图</h3>
+                        <div class="box-tools pull-right">
+                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                        </button>
+                        </div>
+                        <!-- /.box-tools -->
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="box-body" style="display: block;">
+                        <div class="left_div" onclick="top.location.href = '/easyplayer.html'"></div>
+                        <div class="right_div" onclick="top.location.href = '/easypusher.html'"></div>
+                        <img style="width: 100%;height: 100%; " src="./img/introduction.png "></img>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
                 <script>
-                    var openurls = ["/", "/easyplayer.html", "/easypusher.html"];
-                    var token = $.cookie("token") || "";
+                    var openurls = ["/ ", "/easyplayer.html ", "/easypusher.html "];
+                    var token = $.cookie("token ") || " ";
                     if (!token && $.inArray(location.pathname, openurls) < 0) {
-                        top.location.href = "/login.html";
+                        top.location.href = "/login.html ";
                     }
                     if (!token) {
-                        // $(".treeview [href=/config.html]").closest(".treeview").hide();
-                        // $(".treeview [href=/about.html]").closest(".treeview").hide();
+                        // $(".treeview [href=/config.html] ").closest(".treeview ").hide();
+                        // $(".treeview [href=/about.html] ").closest(".treeview ").hide();
                     }
-                    $("#btn-logout").click(function() {
-                        $.get(_url + "/logout");
-                        $.cookie("token", "", {
+                    $("#btn-logout ").click(function() {
+                        $.get(_url + "/logout ");
+                        $.cookie("token ", " ", {
                             expires: -1
                         });
-                        $.cookie("username", "", {
+                        $.cookie("username ", " ", {
                             expires: -1
                         });
-                        top.location.href = "/login.html";
+                        top.location.href = "/login.html ";
                     })
                     $('#pwd-form').validator().on('submit', function(e) {
                         if (!e.isDefaultPrevented()) {
                             e.preventDefault();
-                            var _oldPwd = $("#pwd-form [name=oldPwd]").val();
-                            var _newPwd = $("#pwd-form [name=newPwd]").val();
+                            var _oldPwd = $("#pwd-form [name=oldPwd] ").val();
+                            var _newPwd = $("#pwd-form [name=newPwd] ").val();
                             if (!/^[a-zA-Z0-9]+$/.test(_newPwd) || _newPwd.length > 16) {
-                                $.gritter.add("密码长度不超过16字符，为英文或数字!");
+                                $.gritter.add("密码长度不超过16字符，为英文或数字! ");
                                 return false;
                             }
-                            $("#pwd-form [type=submit]").prop("disabled", true);
+                            $("#pwd-form [type=submit] ").prop("disabled ", true);
                             $.ajax({
-                                type: "GET",
-                                url: _url + "/modifypassword",
+                                type: "GET ",
+                                url: _url + "/modifypassword ",
                                 data: {
                                     oldpassword: $.md5(_oldPwd),
                                     newpassword: $.md5(_newPwd)
@@ -244,21 +279,21 @@
                                     try {
                                         console.log(data);
                                         var ret = JSON.parse(data);
-                                        $.cookie("token", ret.EasyDarwin.Body.Token);
+                                        $.cookie("token ", ret.EasyDarwin.Body.Token);
                                         $.gritter.add({
-                                            text: "修改密码成功!",
-                                            class_name: "gritter-info"
+                                            text: "修改密码成功! ",
+                                            class_name: "gritter-info "
                                         });
-                                        $("#pwd-dlg").modal("hide");
+                                        $("#pwd-dlg ").modal("hide ");
                                         return;
                                     } catch (e) {}
-                                    $.gritter.add("修改密码不成功!");
+                                    $.gritter.add("修改密码不成功! ");
                                 },
                                 error: function(xhr, ts, err) {
-                                    $.gritter.add("修改密码不成功!");
+                                    $.gritter.add("修改密码不成功! ");
                                 },
                                 complete: function() {
-                                    $("#pwd-form [type=submit]").prop("disabled", false);
+                                    $("#pwd-form [type=submit] ").prop("disabled ", false);
                                 }
                             });
                         }
@@ -296,7 +331,8 @@
                             } catch (e) {
                                 return $.Deferred().reject(e);
                             }
-                        }).fail(function(e, ts, xhr) {
+                        }).fail(function(e,
+                            ts, xhr) {
                             console.log(e);
                             $.gritter.add("获取信息失败");
                         })
@@ -311,11 +347,11 @@
                         $.cookie("videoTitle", row.name);
                         top.location.href = "/easyplayer_rtsp.html";
                     }
-
                     $(document).on("click", ".channel img", function(e) {
                         var $img = $(this);
                         var $channel = $img.closest(".channel");
-                        var channel = $channel.data("channel");
+                        var
+                            channel = $channel.data("channel");
                         $("body").mask("加载中...", 100);
                         $.ajax({
                             type: "GET",
@@ -335,7 +371,8 @@
                                     }
                                     $.cookie("videoUrl", videoUrl);
                                     $.cookie("videoImg", $img.attr("src"));
-                                    $.cookie("channel", channel["Channel"]);
+                                    $.cookie("channel",
+                                        channel["Channel"]);
                                     $.cookie("channelName", channel["Name"]);
                                     top.location.href = "./play.html";
                                     return;
@@ -347,7 +384,8 @@
                                     console.log(e);
                                 }
                             },
-                            error: function(xhr, ts, err) {
+                            error: function(xhr,
+                                ts, err) {
                                 $.gritter.add({
                                     text: '获取视频流失败!',
                                     class_name: 'gritter-error'
