--- a/nginx/www/easypusher.html
+++ b/nginx/www/easypusher.html
@@ -154,14 +154,14 @@
                                         <td><a href="https://github.com/EasyDarwin/EasyPusher_iOS">https://github.com/EasyDarwin/EasyPusher_iOS</a></td>
                                     </tr>-->
                                     <tr>
-                                        <td>EasyPusher 安卓客户端</td>
+                                        <td>EasyPusher Android客户端</td>
                                         <td><a href="https://fir.im/EasyPusher">https://fir.im/EasyPusher</a>
                                             <br/>
                                             <img style="width: 250px;height: 250px;" src="./img/EasyPusher_AN.png"></img>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>EasyPusher IOS客户端</td>
+                                        <td>EasyPusher ios客户端</td>
                                         <td>
                                             <img style="width: 250px;height: 250px;" src="./img/EasyPusher_iOS.png"></img>
                                         </td>
