--- a/nginx/www/easyplayer.html
+++ b/nginx/www/easyplayer.html
@@ -94,31 +94,31 @@
             <section class="sidebar">
                 <ul class="sidebar-menu">
                     <li class="treeview">
-                        <a href="/index.html">
+                        <a href="index.html">
                             <i class="fa fa-video-camera"></i>
                             <span>直播推流列表</span>
                         </a>
                     </li>
                     <li class="treeview">
-                        <a href="/config.html">
+                        <a href="config.html">
                             <i class="fa fa-cogs"></i>
                             <span>基本配置</span>
                         </a>
                     </li>
                     <li class="treeview">
-                        <a href="/about.html">
+                        <a href="about.html">
                             <i class="fa fa-support"></i>
                             <span>服务运行信息</span>
                         </a>
                     </li>
                     <li class="treeview">
-                        <a href="/easypusher.html">
+                        <a href="easypusher.html">
                             <i class="fa   fa-sign-in"></i>
                             <span>EasyPusher</span>
                         </a>
                     </li>
                     <li class="treeview">
-                        <a href="/easyplayer.html">
+                        <a href="easyplayer.html">
                             <i class="fa  fa-toggle-right"></i>
                             <span>EasyPlayer</span>
                         </a>
