--- a/nginx/www/play.html
+++ b/nginx/www/play.html
@@ -19,26 +19,26 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-    <script src="/adminlte-2.3.6/plugins/jQuery/jquery-2.2.3.min.js"></script>
-    <script src="/adminlte-2.3.6/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/adminlte-2.3.6/dist/js/app.js"></script>
-    <script src="/adminlte-2.3.6/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+    <script src="adminlte-2.3.6/plugins/jQuery/jquery-2.2.3.min.js"></script>
+    <script src="adminlte-2.3.6/bootstrap/js/bootstrap.min.js"></script>
+    <script src="adminlte-2.3.6/dist/js/app.js"></script>
+    <script src="adminlte-2.3.6/plugins/slimScroll/jquery.slimscroll.min.js"></script>
     <link rel="stylesheet" href="/adminlte-2.3.6/plugins/iCheck/all.css">
-    <script src="/adminlte-2.3.6/plugins/iCheck/icheck.min.js"></script>
-    <script src="/adminlte-2.3.6/plugins/md5/jquery.md5.js"></script>
-    <script src="/adminlte-2.3.6/plugins/input-number/jquery.inputnumber.js"></script>
-    <script src="/adminlte-2.3.6/plugins/ellipsis/jquery.ellipsis.js"></script>
+    <script src="adminlte-2.3.6/plugins/iCheck/icheck.min.js"></script>
+    <script src="adminlte-2.3.6/plugins/md5/jquery.md5.js"></script>
+    <script src="adminlte-2.3.6/plugins/input-number/jquery.inputnumber.js"></script>
+    <script src="adminlte-2.3.6/plugins/ellipsis/jquery.ellipsis.js"></script>
     <link rel="stylesheet" href="/adminlte-2.3.6/plugins/gritter/jquery.gritter.css">
-    <script src="/adminlte-2.3.6/plugins/gritter/jquery.gritter.js"></script>
+    <script src="adminlte-2.3.6/plugins/gritter/jquery.gritter.js"></script>
     <link rel="stylesheet" href="/adminlte-2.3.6/plugins/loadmask/jquery.loadmask.css">
-    <script src="/adminlte-2.3.6/plugins/loadmask/jquery.loadmask.min.js"></script>
-    <script src="/adminlte-2.3.6/plugins/validator/validator.min.js"></script>
-    <script src="/adminlte-2.3.6/plugins/bootbox/bootbox.min.js"></script>
-    <script src="/adminlte-2.3.6/plugins/cookie/jquery.cookie.min.js"></script>
-    <script src="/easyui-1.5.1/easyloader.js"></script>
+    <script src="adminlte-2.3.6/plugins/loadmask/jquery.loadmask.min.js"></script>
+    <script src="adminlte-2.3.6/plugins/validator/validator.min.js"></script>
+    <script src="adminlte-2.3.6/plugins/bootbox/bootbox.min.js"></script>
+    <script src="adminlte-2.3.6/plugins/cookie/jquery.cookie.min.js"></script>
+    <script src="easyui-1.5.1/easyloader.js"></script>
 
     <link rel="stylesheet" href="/css/common.css">
-    <script src="/js/common.js"></script>
+    <script src="js/common.js"></script>
 
     <style>
         .channel-title {
@@ -61,7 +61,7 @@
             height: auto;
         }
     </style>
-    <script src="/js/cyberplayer.js"></script>
+    <script src="js/cyberplayer.js"></script>
 </head>
 
 <body class="hold-transition skin-green sidebar-mini">
@@ -96,25 +96,25 @@
             <section class="sidebar">
                 <ul class="sidebar-menu">
                     <li class="treeview">
-                        <a href="/index.html">
+                        <a href="index.html">
                             <i class="fa fa-video-camera"></i>
                             <span>直播推流列表</span>
                         </a>
                     </li>
                     <li class="treeview">
-                        <a href="/config.html">
+                        <a href="config.html">
                             <i class="fa fa-cogs"></i>
                             <span>基本配置</span>
                         </a>
                     </li>
                     <li class="treeview">
-                        <a href="/about.html">
+                        <a href="about.html">
                             <i class="fa fa-support"></i>
                             <span>服务运行信息</span>
                         </a>
                     </li>
                     <li class="treeview">
-                        <a href="/easypusher.html">
+                        <a href="easypusher.html">
                             <i class="fa   fa-sign-in"></i>
                             <span>EasyPusher</span>
                         </a>
