--- a/nginx/www/easyplayer.html
+++ b/nginx/www/easyplayer.html
@@ -94,7 +94,7 @@
             <section class="sidebar">
                 <ul class="sidebar-menu">
                     <li class="treeview">
-                        <a href="index.html">
+                        <a href="main.html">
                             <i class="fa fa-video-camera"></i>
                             <span>直播推流列表</span>
                         </a>
