--- a/nginx/www/easyplayer_rtsp.html
+++ b/nginx/www/easyplayer_rtsp.html
@@ -95,7 +95,7 @@
             <section class="sidebar">
                 <ul class="sidebar-menu">
                     <li class="treeview">
-                        <a href="index.html">
+                        <a href="main.html">
                             <i class="fa fa-video-camera"></i>
                             <span>直播推流列表</span>
                         </a>
@@ -179,7 +179,7 @@
                 <script>
                     $("#rtsp_url").html($.cookie("videoUrl"));
                     $("#back-btn").click(function() {
-                        top.location.href = "/index.html";
+                        top.location.href = "index.html";
                     });
                 </script>
             </section>
