--- a/nginx/www/adminlte-2.3.6/plugins/ckeditor/samples/toolbarconfigurator/index.html
+++ b/nginx/www/adminlte-2.3.6/plugins/ckeditor/samples/toolbarconfigurator/index.html
@@ -43,7 +43,7 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 		<nav class="navigation-b grid-width-70">
 			<ul>
 				<li><a href="../index.html"  class="button-a">Start</a></li>
-				<li><a href="index.html"  class="button-a button-a-background">Toolbar configurator</a></li>
+				<li><a href="main.html"  class="button-a button-a-background">Toolbar configurator</a></li>
 			</ul>
 		</nav>
 	</div>
