--- a/nginx/www/main.html
+++ b/nginx/www/main.html
@@ -37,7 +37,7 @@
     <script src="./easyui/easyloader.js"></script>
 
     <link rel="stylesheet" href="./css/common.css">
-	<script src="./js/common.js"></script>
+    <script src="./js/common.js"></script>
     <style>
         .channel .thumbnail {
             position: relative;
@@ -231,8 +231,8 @@
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body" style="display: block;">
-                        <div class="left_div" onclick="top.location.href = 'easyplayer.html'"></div>
-                        <div class="right_div" onclick="top.location.href = 'easypusher.html'"></div>
+                        <div class="left_div" onclick="top.location.href = 'easypusher.html'"></div>
+                        <div class="right_div" onclick="top.location.href = 'easyplayer.html'"></div>
                         <img style="width: 100%;height: 100%; " src="./img/introduction.png "></img>
                     </div>
                     <!-- /.box-body -->
