取消无直播流提示
Former-commit-id: 5317e8a193424b28e251e684c148c812ed6b095a
Former-commit-id: 2acb860a9396df38ed8ea5c9793ad53309363547 [formerly 46a051b73bc300686237173b0c174d1bd45d1863]
Former-commit-id: 2535f0aa1e1d6636fddf2975c54298d372f17fbd

--- a/nginx/www/main.html
+++ b/nginx/www/main.html
@@ -318,7 +318,7 @@
                                 var total = data.EasyDarwin.Body.SessionCount;
                                 var sessions;
                                 if (total == 0) {
-                                    $.gritter.add("暂无直播流数据");
+                                    // $.gritter.add("暂无直播流数据");
                                     sessions = [];
                                 } else {
                                     sessions = data.EasyDarwin.Body.Sessions;
