添加EasyPusher iOS客户端地址
Former-commit-id: e2a30fd1424a62b156ec62a1c936778a84c9576d
Former-commit-id: d4ef0289ac690900a0f4fc4240a49d08364e153d [formerly 415b82bf1b4d75d972149ac86be27f0f6adf2564]
Former-commit-id: 3263dcfb20822807a1fc04d189e95e216e9a7cc6

--- a/nginx/www/easypusher.html
+++ b/nginx/www/easypusher.html
@@ -163,6 +163,8 @@
                                     <tr>
                                         <td>EasyPusher ios客户端</td>
                                         <td>
+                                        	<a href="https://itunes.apple.com/us/app/easypusher/id1211967057">https://itunes.apple.com/us/app/easypusher/id1211967057</a>
+                                        	<br/>
                                             <img style="width: 250px;height: 250px;" src="./img/EasyPusher_iOS.png"></img>
                                         </td>
                                     </tr>
