Live add refresh
Former-commit-id: 0776db97e4059dd9b9cb021cadb6253492b48e48
Former-commit-id: 44a7c5720408b235426b103759895ec458a63f90 [formerly 1be1ffe4f7f74e51128fac947b751409ff4599b2]
Former-commit-id: 2b49631b84e69673ce9bb71c7ff05bcee543ddbf

--- a/nginx/www/main.html
+++ b/nginx/www/main.html
@@ -306,10 +306,21 @@
                         btns += "</div>";
                         return btns;
                     }
+                    var currentParma = "";
 
                     function onBeforeLoad(param) {
-                        var start = (param.page - 1) * param.rows;
-                        var end = param.page * param.rows;
+                        if (currentParma == "") {
+                            setInterval(function() {
+                                loadLives();
+                            }, 3000);
+                        }
+                        currentParma = param;
+                        loadLives();
+                    }
+
+                    function loadLives() {
+                        var start = (currentParma.page - 1) * currentParma.rows;
+                        var end = currentParma.page * currentParma.rows;
                         $.ajax("/api/v1/getrtsplivesessions", {
                             cache: false
                         }).then(function(data) {
